feat: added GET User by ID API
